@startuml

title __INDEXING's Class Diagram__\n

  package  {
    package indexing {
      abstract class Aindexer {
          {static} ~ DICT : String
          {static} ~ NAIVE : String
          {static} ~ RK : String
          ~ dataStructType : String
          ~ Aindexer()
          {abstract} + indexEntry()
          + setOrigin()
          ~ Aindexer()
      }
    }
  }
  

  package  {
    package indexing {
      class Indexer {
          + Indexer()
          + indexCorpus()
          + indexEntry()
          - writeToFile()
      }
    }
  }
  

  Aindexer o-- IparsingRule : parseRule
  Aindexer o-- IdataStructure : dataStruct
  Aindexer o-- Corpus : origin
  Indexer -up-|> Aindexer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
